footer element image was wider than the page. Set width to 100svw and fixed the issue. Compare page restyling done. Looking good, on mobile only so far.

--- a/compare.css
+++ b/compare.css
@@ -56,14 +56,14 @@ body {
 }
 
 #compare_container {
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
     margin-top: 40px;
-    width: 100vw;
-    height: 70dvh;
-    border: 10px solid red;
+    width: 100svw;
+    height: 70svh;
 }
 
 #textbox1,
@@ -90,28 +90,36 @@ body {
 #modals {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 20px;
     width: 100%;
     height: 100%;
-    /* border: 4px solid blue; */
 }
 
 #modal_screen,
 #modal_screen2 {
-    width: 50%;
+    display: none;
+    text-align: center;
+    top: 10em;
+    width: 45%;
     height: 100%;
-    /* border: 6px solid gold; */
-}
-
-#modal_screen_data,
-#modal_screen_data2 {
+    margin-top: -20em;
+    overflow: scroll;
+    background-color: white;
 }
 
 #close,
 #close2 {
+    font-size: 47px;
+    margin-bottom: 40px;
 }
 
-footer {
+#footer {
+    width: 100svw;
     position: absolute;
     bottom: 15px;
+}
+
+#footer img {
+    width: 100%;
 }
